refactor, more catppuccin theme

--- a/modules/common/programs/btop/btop.conf
+++ b/modules/common/programs/btop/btop.conf
@@ -2,7 +2,8 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "gruvbox_material_dark"
+color_theme = "catppuccin_macchiato"
+#color_theme = "gruvbox_material_dark"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = False
@@ -90,7 +91,7 @@ proc_left = False
 proc_filter_kernel = False
 
 #* In tree-view, always accumulate child process resources in the parent process.
-proc_aggregate = False
+proc_aggregate = True
 
 #* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
@@ -154,7 +155,7 @@ custom_cpu_name = ""
 disks_filter = "exclude=/mnt/arch /boot"
 
 #* Show graphs instead of meters for memory values.
-mem_graphs = True
+mem_graphs = False
 
 #* Show mem box below net box instead of above.
 mem_below_net = False
@@ -190,7 +191,7 @@ show_io_stat = True
 io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
-io_graph_combined = False
+io_graph_combined = True
 
 #* Set the top speed for the io graphs in MiB/s (100 by default), use format "mountpoint:speed" separate disks with whitespace " ".
 #* Example: "/mnt/media:100 /:20 /boot:1".
@@ -208,7 +209,7 @@ net_auto = False
 net_sync = True
 
 #* Starts with the Network Interface specified here.
-net_iface = ""
+net_iface = "br0"
 
 #* Show battery stats in top right if battery is present.
 show_battery = True
