--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -3,6 +3,8 @@ monitor=eDP-1,preferred,auto,1.5
 
 exec-once = dbus-update-activation-environment --systemd PATH DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service
 
+source=~/.config/hypr/mocha.conf
+
 $terminal = alacritty
 $fileManager = nautilus
 
@@ -14,7 +16,7 @@ input {
     kb_rules =
 
     repeat_delay = 200
-    repeat_rate = 50
+    repeat_rate = 60
 
     accel_profile = adaptive
     sensitivity = 0.0
@@ -32,12 +34,16 @@ input {
 }
 
 general {
-    gaps_in = 6
-    # gaps_out = 7, 8
-    gaps_out = 6, 7, 5, 7
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    gaps_in = 7
+    gaps_out = 14
+
+    # border_size = 2
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.inactive_border = rgba(595959aa)
+
+    border_size = 5
+    col.active_border = rgba($mauve) rgba($teal) 45deg
+    col.inactive_border = rgba($transparent)
 
     layout = dwindle
     no_focus_fallback = true
@@ -66,7 +72,7 @@ decoration {
     }
 
     drop_shadow = yes
-    shadow_range = 4
+    shadow_range = 9
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
@@ -104,14 +110,16 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.00
     bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
+    bezier = overshot, 0.39, 0.99, 0.25, 1.07
 
     animation = windows, 1, 6, smooth-linear
     animation = windowsIn, 1, 6, myBezier, popin 50%
     animation = windowsOut, 1, 6, myBezier, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
+    animation = border, 1, 12, default
+    # animation = borderangle, 1, 8, default
+    animation = borderangle, 1, 300, default, loop
     animation = fade, 1, 7, myBezier
-    animation = workspaces, 1, 6, myBezier,# slidefade 20%
+    animation = workspaces, 1, 5, overshot, slidevert # slidefade 20%
     animation = layers, 1, 7, myBezier
     animation = fadeLayers, 1, 7, myBezier
 }
@@ -148,6 +156,7 @@ bind = ALT SHIFT, Space, togglefloating,
 bind = ALT, P, exec, ~/bin/rofi.sh rofi -show run
 bind = ALT, K, pseudo, # dwindle
 bind = ALT, J, togglesplit, # dwindle
+bind = ALT, Tab, exec, ~/bin/rofi.sh rofi -show window
 
 # launch apps
 bind = ALT, Return, exec, $terminal
