kitty, zoxide, fzf

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ exec-once = dbus-update-activation-environment --systemd PATH DISPLAY HYPRLAND_I
 
 source=~/.config/hypr/mocha.conf
 
-$terminal = alacritty
+$terminal = kitty
 $fileManager = nautilus
 
 input {
@@ -119,7 +119,8 @@ animations {
     # animation = borderangle, 1, 8, default
     animation = borderangle, 1, 300, default, loop
     animation = fade, 1, 7, myBezier
-    animation = workspaces, 1, 5, overshot, slidevert # slidefade 20%
+    # animation = workspaces, 1, 5, overshot, slidevert # slidefade 20%
+    animation = workspaces, 1, 6, myBezier, # slidefade 20%
     animation = layers, 1, 7, myBezier
     animation = fadeLayers, 1, 7, myBezier
 }
