--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -5,7 +5,7 @@ exec-once = dbus-update-activation-environment --systemd PATH DISPLAY HYPRLAND_I
 
 source=~/.config/hypr/mocha.conf
 
-$terminal = kitty
+$terminal = kitty -1
 $fileManager = nautilus
 
 input {
