--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -1,3 +1,7 @@
+font_family JetBrainsMono NF Semibold
+font_size 10
+
+cursor_shape block
 background_opacity 0.85
 window_padding_width 2
 placement_strategy top-left
