--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -18,7 +18,9 @@ map kitty_mod+c copy_to_clipboard
 map kitty_mod+v paste_from_clipboard
 map kitty_mod+k  scroll_line_up
 map kitty_mod+j scroll_line_down
+map shift+page_up scroll_page_up
 map kitty_mod+page_up scroll_page_up
+map shift+page_down scroll_page_down
 map kitty_mod+page_down scroll_page_down
 map kitty_mod+z scroll_to_prompt -1
 map kitty_mod+x scroll_to_prompt 1
