jeff-nixos changes

--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -14,7 +14,9 @@ notify_on_cmd_finish always 30 notify
 
 kitty_mod alt+shift
 
+map ctrl+shift+c copy_to_clipboard
 map kitty_mod+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
 map kitty_mod+v paste_from_clipboard
 map kitty_mod+k  scroll_line_up
 map kitty_mod+j scroll_line_down
