--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -146,6 +146,7 @@ windowrulev2 = float,class:([Nn]autilus.*)
 windowrulev2 = float,class:([Ss]team.*)
 windowrulev2 = float,class:(.?themechanger.*)
 windowrulev2 = float,class:(gedit.*)
+windowrulev2 = float,class:(lich.rbw.*)
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
