mpv thumbnail plugin

--- a/modules/common/programs/mpv/mpv.conf
+++ b/modules/common/programs/mpv/mpv.conf
@@ -1,6 +1,9 @@
 hwdec=no
 profile=gpu-hq
 
+# disable osc for thumbnail plugin
+osc=no
+
 osd-level=1
 osd-margin-x=6
 osd-margin-y=4
@@ -17,8 +20,8 @@ osd-bar-align-y=0.9
 #osd-shadow-color="#90F0F0F0"
 #osd-shadow-offset=1.5
 #osd-back-color='#20000000'
-osd-bar-w=66
-osd-bar-h=3
+##osd-bar-w=66
+##osd-bar-h=3
 #osd-bar-h=4
 #osd-duration=2000
 #osd-duration=750
@@ -33,10 +36,10 @@ sub-border-size=1.0
 sub-color='#DDFFFFFF'
 sub-scale=1.1
 
-cache=yes
-demuxer-max-bytes=300M
-demuxer-max-back-bytes=100M
-cache-pause=no
+# cache=yes
+# demuxer-max-bytes=300M
+# demuxer-max-back-bytes=100M
+# cache-pause=no
 
 autofit=45%
 no-audio-display
