--- a/modules/common/programs/mpv/script-opts/mpv_thumbnail_script.conf
+++ b/modules/common/programs/mpv/script-opts/mpv_thumbnail_script.conf
@@ -29,7 +29,7 @@ prefer_mpv=no
 mpv_no_sub=no
 
 # Enable to disable the built-in keybind ("T") to add your own, see after the block
-disable_keybinds=[yes/no]
+disable_keybinds=no
 
 # The maximum dimensions of the thumbnails, in pixels
 # Defaults to 200 and 200
