search-nixos-options-rofi

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -168,6 +168,7 @@ bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 bind = ALT SHIFT, P, exec, ~/bin/rofi.sh rofi-pass
 bind = SUPER, S, exec, ~/bin/rofi.sh rofi-systemd
 # bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
+bind = SUPER, n, exec, search-nixos-options-rofi
 
 # special workspaces
 bind = SUPER, Comma, togglespecialworkspace, tasks
