rofi-query, search-hm-options

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -168,7 +168,8 @@ bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 bind = ALT SHIFT, P, exec, ~/bin/rofi.sh rofi-pass
 bind = SUPER, S, exec, ~/bin/rofi.sh rofi-systemd
 # bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
-bind = SUPER, n, exec, search-nixos-options-rofi
+bind = SUPER, n, exec, search-nixos-options $(rofi-query 'nixos options')
+bind = SUPER, h, exec, search-hm-options $(rofi-query 'home-manager options')
 
 # special workspaces
 bind = SUPER, Comma, togglespecialworkspace, tasks
