bin/browser-search

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -166,10 +166,14 @@ bind = ALT CONTROL, F, exec, $fileManager
 bind = ALT CONTROL, E, exec, emacsclient -c
 bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 bind = ALT SHIFT, P, exec, ~/bin/rofi.sh rofi-pass
-bind = SUPER, S, exec, ~/bin/rofi.sh rofi-systemd
+bind = SUPER SHIFT, S, exec, ~/bin/rofi.sh rofi-systemd
 # bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
-bind = SUPER, n, exec, search-nixos-options $(rofi-query 'nixos options')
-bind = SUPER, h, exec, search-hm-options $(rofi-query 'home-manager options')
+
+# rofi commands
+bind = SUPER, S, exec, browser-search
+bind = SUPER, N, exec, browser-search NixOS
+bind = SUPER, H, exec, browser-search 'Home Manager'
+bind = SUPER, G, exec, browser-search Google
 
 # special workspaces
 bind = SUPER, Comma, togglespecialworkspace, tasks
