kitty/extra.conf

--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -1,8 +1,8 @@
-font_family JetBrainsMono NF Semibold
+font_family JetBrainsMono NF Bold
 font_size 10
 
 cursor_shape block
-background_opacity 0.85
+background_opacity 0.9
 window_padding_width 2
 placement_strategy top-left
 tab_bar_style powerline
@@ -40,5 +40,5 @@ map kitty_mod+l next_layout
 
 map ctrl+alt+shift+, load_config_file
 
-map kitty_mod + plus change_font_size all +1.0
-map kitty_mod + minus change_font_size all -1.0
+map kitty_mod+equal change_font_size all +1.0
+map kitty_mod+minus change_font_size all -1.0
