fixes for kitty, mpv, disable mesa-git

--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -8,7 +8,7 @@ placement_strategy top-left
 tab_bar_style powerline
 tab_powerline_style slanted
 allow_cloning yes
-notify_on_cmd_finish always 30 notify
+# notify_on_cmd_finish always 30 notify
 
 # clear_all_shortcuts yes
 
