--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -47,7 +47,7 @@ general {
 
     layout = dwindle
     no_focus_fallback = true
-    resize_on_border = true
+    resize_on_border = false
     hover_icon_on_border = false
 }
 
@@ -65,8 +65,8 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 2
+        size = 5
+        passes = 1
 
         special = false;
     }
