--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -189,14 +189,23 @@ binde = ,XF86AudioLowerVolume, exec, volumectl -d -
 bind = ,XF86AudioMute, exec, volumectl -d %
 
 # brightness
-binde = SUPER, equal, exec, lightctl -d -D ddcci5 + 2
-binde = SUPER, minus, exec, lightctl -d -D ddcci5 - 2
-bind = SUPER, grave, exec, lightctl -d -D ddcci5 96%
-bind = SUPER, backslash, exec, lightctl -d -D ddcci5 80%
-binde = SUPER CONTROL, equal, exec, lightctl -d -D ddcci6 + 2
-binde = SUPER CONTROL, minus, exec, lightctl -d -D ddcci6 - 2
-bind = SUPER CONTROL, grave, exec, lightctl -d -D ddcci6 96%
-bind = SUPER CONTROL, backslash, exec, lightctl -d -D ddcci6 88%
+# binde = SUPER, equal, exec, lightctl -d -D ddcci5 + 2
+# binde = SUPER, minus, exec, lightctl -d -D ddcci5 - 2
+# bind = SUPER, grave, exec, lightctl -d -D ddcci5 96%
+# bind = SUPER, backslash, exec, lightctl -d -D ddcci5 80%
+# binde = SUPER CONTROL, equal, exec, lightctl -d -D ddcci6 + 2
+# binde = SUPER CONTROL, minus, exec, lightctl -d -D ddcci6 - 2
+# bind = SUPER CONTROL, grave, exec, lightctl -d -D ddcci6 96%
+# bind = SUPER CONTROL, backslash, exec, lightctl -d -D ddcci6 88%
+##
+binde = SUPER, equal, exec, change-brightness 5 + 2
+binde = SUPER, minus, exec, change-brightness 5 - 2
+bind = SUPER, grave, exec, change-brightness 5 96
+bind = SUPER, backslash, exec, change-brightness 5 80
+binde = SUPER CONTROL, equal, exec, change-brightness 6 + 2
+binde = SUPER CONTROL, minus, exec, change-brightness 6 - 2
+bind = SUPER CONTROL, grave, exec, change-brightness 6 96
+bind = SUPER CONTROL, backslash, exec, change-brightness 6 88
 
 binde = ,XF86MonBrightnessUp, exec, lightctl -d + 5
 binde = ,XF86MonBrightnessDown, exec, lightctl -d - 5
