flake.lock, fixes

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -1,3 +1,9 @@
+debug {
+    disable_logs = false
+    disable_time = false
+    enable_stdout_logs = true
+}
+
 monitor=,preferred,auto,1.6667
 monitor=eDP-1,preferred,auto,1.75
 
@@ -37,10 +43,6 @@ general {
     gaps_in = 7
     gaps_out = 14
 
-    # border_size = 2
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
-
     border_size = 6
     col.active_border = rgba($mauve) rgba($teal) 45deg
     col.inactive_border = rgba($transparent)
@@ -65,8 +67,8 @@ decoration {
 
     blur {
         enabled = true
-        size = 5
-        passes = 1
+        size = 3
+        passes = 2
 
         special = false;
     }
