flake.lock, fixes

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -67,11 +67,11 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 2
 
-        special = false;
+        special = false
     }
 
     drop_shadow = yes
