re-enable hyprland blur

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -67,9 +67,9 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = false
-        size = 3
-        passes = 2
+        enabled = true
+        size = 2
+        passes = 3
 
         special = false
     }
