--- a/modules/linux/vfio/looking-glass-client.ini
+++ b/modules/linux/vfio/looking-glass-client.ini
@@ -1,56 +1,40 @@
 [app]
 shmFile=/dev/shm/looking-glass
 renderer=egl
-# renderer=opengl
 cursorPollInterval=250
 framePollInterval=250
 
 [win]
 title=*Windows 11*
-size=3840x2160
+# size=3840x2160
 # size=3762x2116
 fullScreen=yes
-autoResize=no
-allowResize=no
+autoResize=yes
+allowResize=yes
 borderless=yes
 keepAspect=yes
 minimizeOnFocusLoss=no
-# fpsMin=-1
-# showFPS=yes
+fpsMin=-1
+showFPS=no
 quickSplash=yes
-dontUpscale=yes
-#shrinkOnUpscale=yes
 autoScreensaver=yes
-# jitRender=no
-uiFont='monospace'
+jitRender=no
+uiFont='JetBrainsMono Nerd Font'
 uiSize=24
 
 [input]
 grabKeyboard=no
-# escapeKey=229
-# mouseSens=-3
-# # hideCursor=no
-# mouseRedraw=no
+mouseRedraw=yes
 
 [spice]
 enable=no
 input=no
 clipboard=yes
 showCursorDot=no
+audio=no
 
-[egl]
-# vsync=no
-# doubleBuffer=no
-# multisample=yes
-# #nvGainMax=0
-# noBufferAge=no
-# noSwapDamage=no
-
-[opengl]
-# mipmap=yes
-# vsync=no
-# preventBuffer=yes
-# amdPinnedMem=yes
+[audio]
+syncVolume=no
 
 [wayland]
 warpSupport=yes
