vscode/cursor fixes

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -171,9 +171,9 @@ bind = SUPER SHIFT, S, exec, ~/bin/rofi.sh rofi-systemd
 
 # rofi commands
 bind = SUPER, S, exec, browser-search
-bind = SUPER, N, exec, browser-search NixOS
-bind = SUPER, H, exec, browser-search 'Home Manager'
-bind = SUPER, G, exec, browser-search Google
+# bind = SUPER, N, exec, browser-search NixOS
+# bind = SUPER, H, exec, browser-search 'Home Manager'
+# bind = SUPER, G, exec, browser-search Google
 
 # special workspaces
 bind = SUPER, Comma, togglespecialworkspace, tasks
@@ -184,8 +184,8 @@ bind = SUPER, X, togglespecialworkspace, info
 bind = SUPER SHIFT, X, movetoworkspace, special:info
 bind = SUPER, C, togglespecialworkspace, misc
 bind = SUPER SHIFT, C, movetoworkspace, special:misc
-bind = SUPER, V, togglespecialworkspace, scratch2
-bind = SUPER SHIFT, V, movetoworkspace, special:scratch2
+# bind = SUPER, V, togglespecialworkspace, scratch2
+# bind = SUPER SHIFT, V, movetoworkspace, special:scratch2
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
