--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -298,8 +298,8 @@ bind = SUPER SHIFT, 9, movetoworkspace, 19
 bind = SUPER SHIFT, 0, movetoworkspace, 20
 
 # Example special workspace (scratchpad)
-bind = ALT, S, togglespecialworkspace, magic
-bind = ALT SHIFT, S, movetoworkspace, special:magic
+# bind = ALT, S, togglespecialworkspace, magic
+# bind = ALT SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = ALT, mouse_down, workspace, e+1
