--- a/modules/common/programs/mpv/mpv.conf
+++ b/modules/common/programs/mpv/mpv.conf
@@ -1,8 +1,16 @@
+osc=no
+
 hwdec=no
 profile=gpu-hq
+framedrop=no
 
-# disable osc for thumbnail plugin
-osc=no
+cache=yes
+demuxer-max-bytes=300M
+demuxer-max-back-bytes=100M
+cache-pause=no
+
+autofit=45%
+no-audio-display
 
 osd-level=1
 osd-margin-x=6
@@ -12,36 +20,15 @@ osd-on-seek=msg-bar
 osd-msg3='${osd-sym-cc} ${playback-time} / ${duration} <${percent-pos}%>'
 osd-font='JetBrains Mono Bold'
 osd-font-size=21
-#osd-spacing=-0.33
 osd-color='#E8D0D0D0'
 osd-border-size=1.5
 osd-border-color='#E8101010'
 osd-bar-align-y=0.9
-#osd-shadow-color="#90F0F0F0"
-#osd-shadow-offset=1.5
-#osd-back-color='#20000000'
-##osd-bar-w=66
-##osd-bar-h=3
-#osd-bar-h=4
-#osd-duration=2000
-#osd-duration=750
 
 embeddedfonts=no
-# sub-ass-override=force
-# no-sub-ass
 sub-font='Inter'
 sub-font-size=32
 sub-border-color='#DD000000'
 sub-border-size=1.0
 sub-color='#DDFFFFFF'
 sub-scale=1.1
-
-# cache=yes
-# demuxer-max-bytes=300M
-# demuxer-max-back-bytes=100M
-# cache-pause=no
-
-autofit=45%
-no-audio-display
-
-# video-sync=display-resample
