--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -1,5 +1,5 @@
 font_family JetBrainsMono NF Bold
-font_size 10
+font_size 9.0
 
 cursor_shape block
 background_opacity 0.9
@@ -8,6 +8,7 @@ placement_strategy top-left
 tab_bar_style powerline
 tab_powerline_style slanted
 allow_cloning yes
+notify_on_cmd_finish never
 # notify_on_cmd_finish always 30 notify
 
 # clear_all_shortcuts yes
